# niri_display_manager

./: README.md  pyproject.toml
.github/workflows/: release.yml
packaging/aur/: .gitignore  PKGBUILD  niri-display-manager-0.1.0-1-x86_64.pkg.tar.zst
packaging/aur/pkg/niri-display-manager/: .BUILDINFO  .MTREE  .PKGINFO
packaging/aur/pkg/niri-display-manager/usr/lib/systemd/user/: niri-display-manager-daemon.service
packaging/aur/src/niri_display_manager-0.1.0/: .gitignore  LICENSE
packaging/aur/src/niri_display_manager-0.1.0/packaging/flatpak/: io.github.rickycbanks.NiriDisplayManager.desktop  io.github.rickycbanks.NiriDisplayManager.json
packaging/aur/src/niri_display_manager-0.1.0/qml/components/: MonitorBlock.qml  MonitorIdOverlay.qml
packaging/aur/src/niri_display_manager-0.1.0/src/niri_display_manager/daemon/: __init__.py
packaging/aur/src/niri_display_manager-0.1.0/src/niri_display_manager/ipc/: __init__.py
packaging/aur/src/niri_display_manager-0.1.0/src/niri_display_manager/ui/: bridge.py
qml/: main.qml
qml/components/: DisplayTypeBar.qml  MonitorBlock.qml  MonitorCanvas.qml  MonitorSettings.qml  ProfilePanel.qml
qml/theme/: Theme.qml
src/niri_display_manager/: main.py
src/niri_display_manager/config/: kdl_finder.py  profile_manager.py
src/niri_display_manager/ipc/: niri_socket.py
src/niri_display_manager/ui/: bridge.py
