[project]
name = "niri-display-manager"
version = "0.1.0"
description = "A GUI display manager for the Niri window manager"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["niri", "wayland", "display", "monitor"]
dependencies = [
    "pyside6>=6.11.0",
]

[project.scripts]
niri-display-manager = "niri_display_manager.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/niri_display_manager"]

[tool.uv]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]
